[package]
name = "day_of_thomas"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
colored = "2.0"
chrono = "0.4"
cpal = "0.15"
hound = "3.5"
whisper-rs = "0.8"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "multipart"] }
futures-util = "0.3"

[[bin]]
name = "day_of_thomas"
path = "main.rs"
